--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Azgaoui Omar Ziyad | An aspiring computer scientist studying in Lausanne, Switzerland.
+    Portfolio | Azgaoui Omar Ziyad
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -41,7 +41,7 @@
         <h1 class="heading-primary">
           <span>Azgaoui Omar Ziyad</span>
         </h1>
-        <p>An aspiring computer scientist studying in Lausanne, Switzerland.</p>
+        <p>An aspiring Computer Scientist based in Lausanne, Switzerland.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -221,6 +221,7 @@
             <img src="./images/logos/python.png" class="skills__logo" alt="Python" title="Python">
             <img src="./images/logos/html.png" class="skills__logo" alt="HTML" title="HTML5">
             <img src="./images/logos/css.png" class="skills__logo" alt="CSS" title="CSS3">
+            <img src="./images/logos/javascript.png" class="skills__logo" alt="JavaScript" title="JavaScript">
             <img src="./images/logos/verilog.png" class="skills__logo" alt="Verilog" title="Verilog HDL">
           </div>
       </div>
@@ -249,7 +250,7 @@
 
           <div class="about__photo-container">
             <a href="https://youtu.be/dQw4w9WgXcQ?si=ZPxhp3yfk-oAy5Jh" target="_blank" rel="noopener noreferrer">
-              <img class="about__photo" src="./images/IMG_6745.jpg" alt="" />
+              <img class="about__photo" src="./images/azgaoui-omar-ziyad.jpg" alt="" />
             </a>
           </div>
         </div>
@@ -294,7 +295,7 @@
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href="https://www.linkedin.com/in/omar-ziyad-azgaoui-7b4451272?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BcsyYMvGKQ5yu4elmWn86Yw%3D%3D">
+          <a href="https://www.linkedin.com/in/omar-ziyad-azgaoui?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B%2F4uJsX4iQwavyqEukXd%2F2g%3D%3D">
             <img src="./images/svg/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
