--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href="https://codepen.io/nisar_hassan" title="Link to Whatsapp Profile">
+          <a href="#" title="Link to Whatsapp Profile">
             <img src="./images/svg/whatsapp.svg" class="footer__social-image" alt="Whatsapp">
           </a>
         </li>
