--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 
   <meta name="description" content="Add small description of yourslef.">
   <meta name="keywords" content="Java, Python, HTML, CSS" />
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D743R8VEYS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-D743R8VEYS');
+  </script>
+  
   <link rel="stylesheet" href="index.css" />
 </head>
 
