--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="work__text">
               <h3>Portfolio</h3>
               <p>
-                A fully responsive personal portfolio site built from template with custom sliders, modals, and dynamic 
+                A fully responsive personal portfolio site with custom sliders, modals, and dynamic 
                 gallery features.
               </p>
               <ul class="work__list">
@@ -187,8 +187,8 @@
             <div class="work__text">
               <h3>Pendu</h3>
               <p>
-                A clean, interactive Hangman game in Python with multiple difficulty levels and polished visuals for each 
-                game state.
+                An interactive Hangman game in Python with multiple difficulty levels and polished visuals for each 
+                game state using turtle.
               </p>
               <ul class="work__list">
                 <li>Python</li>
@@ -249,6 +249,7 @@
               I’m passionate about crafting cool projects, diving into new tools, and figuring out how systems 
               really tick under the hood 🤓. When I’m not coding, you’ll probably find me chasing waves 🏄‍♂️, going for a 
               run 🏃‍♂️, or dreaming up fresh ideas to bring to life. 
+              With curiosity as my compass and challenges as fuel, I’m constantly looking for new ways to grow and create 🚀.
               Right now, I’m on the lookout for an internship where I can grow, team up with awesome people, and make a 
               real impact — all with curiosity, drive, and good vibes 🚀.
             </p>
@@ -278,12 +279,12 @@
       <h2>Get in Touch</h2>
       <div class="contact__info">
         <p>
-          I’m currently a computer science student at EPFL, looking for an internship where 
-          I can apply and further develop the skills I’ve gained through academic projects and personal 
-          initiatives. If you’re seeking someone motivated, curious, and eager to learn, feel free 
-          to get in touch — whether it’s for a potential opportunity, a question, or simply to connect.
-          You’ll find my Resume above with more details about my background. The fastest way to reach me is via email. 
-          I’ll be glad to hear from you. 😊
+          I’m currently a computer science student at EPFL, looking for an internship where I can apply and further 
+          develop the skills I’ve gained through academic projects and personal initiatives. Right now, I’m on the lookout 
+          for a place where I can grow, team up with awesome people, and make a real impact — all with curiosity, drive, 
+          and good vibes 🚀. If you’re seeking someone motivated, curious, and eager to learn, feel free to get in touch — 
+          whether it’s for a potential opportunity, a question, or simply to connect. You’ll find my resume above with 
+          more details about my background. The fastest way to reach me is via email — I’ll be glad to hear from you. 😊
         </p>
         <a href="mailto:omar.azgaoui@epfl.ch?cc=omarziyad.agzaoui2005@gmail.com" class="btn">📬 omar.azgaoui@epfl.ch / omarziyad.agzaoui2005@gmail.com </a>
       </div>
