--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="work" id="work">
       <!-- Modal pour afficher les images en grand -->
       <div id="galleryModal" class="gallery-modal">
-        <button class="close-button">&times;</button> <!-- déplacé ici -->
+        <button class="close-button">&times;</button> 
         <div class="gallery-content">
           <button class="prev">&#10094;</button>
           <button class="next">&#10095;</button>
