Quick fix analytics

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Pendu</h3>
+              <h3>Hangman</h3>
               <p>
                 An interactive Hangman game in Python with multiple difficulty levels and polished visuals for each 
                 game state using turtle.
