--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://github.com/AZOGOAT/Portfolio/tree/main/Projects/ReCHor" class="link__text" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/AZOGOAT/ReCHor" class="link__text" target="_blank" rel="noopener noreferrer">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/AZOGOAT/Portfolio" title="View Source Code" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/AZOGOAT?tab=repositories" title="View Source Code" target="_blank" rel="noopener noreferrer">
                   <img src="./images/svg/github.svg" class="work__code" alt="GitHub">
                 </a>
               </div>
@@ -126,10 +126,10 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://github.com/AZOGOAT/Portfolio/tree/main/Projects/ICMonGame" class="link__text" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/AZOGOAT/ICMonGame" class="link__text" target="_blank" rel="noopener noreferrer">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/AZOGOAT/Portfolio" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/AZOGOAT?tab=repositories" target="_blank" rel="noopener noreferrer">
                   <img src="./images/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
@@ -163,10 +163,10 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://github.com/AZOGOAT/Portfolio/tree/main" class="link__text" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/AZOGOAT/Portfolio" class="link__text" target="_blank" rel="noopener noreferrer">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/AZOGOAT/Portfolio">
+                <a href="https://github.com/AZOGOAT?tab=repositories">
                   <img src="./images/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
@@ -195,10 +195,10 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://github.com/AZOGOAT/Portfolio/tree/main/Projects/Pendu" class="link__text" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/AZOGOAT/Hangman.git" class="link__text" target="_blank" rel="noopener noreferrer">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/AZOGOAT/Portfolio" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/AZOGOAT?tab=repositories" target="_blank" rel="noopener noreferrer">
                   <img src="./images/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub">
                 </a>
               </div>
@@ -307,7 +307,7 @@
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href="https://www.linkedin.com/in/omar-ziyad-azgaoui?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B%2F4uJsX4iQwavyqEukXd%2F2g%3D%3D">
+          <a href="https://www.linkedin.com/in/omar-ziyad-azgaoui/">
             <img src="./images/svg/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
