--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     Portfolio | Azgaoui Omar Ziyad
   </title>
 
-  <meta name="description" content="Add small description of yourslef.">
-  <meta name="keywords" content="Java, Python, HTML, CSS" />
+  <meta name="description" content="Personal portfolio of Azgaoui Omar Ziyad, a computer science student at EPFL. Showcasing academic and personal projects, programming skills, and resume.">
+  <meta name="keywords" content="Portfolio, Informatique, Computer Science, EPFL, Java, Python, HTML, CSS, GitHub, Programmation, Azgaoui Omar Ziyad, Internship, Stage" />
   
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-D743R8VEYS"></script>
