--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                   </ul>
 
                   <p class="cefr-legend">
-                    From beginner (A1) to proficient (C2).<br>*HSK2 is a Chinese proficiency lvl equivalent to A2.
+                    From beginner (A1) to native (C2).<br>*HSK2 is a Chinese proficiency lvl equivalent to A2.
                   </p>
                 </div>
               </div>
