--- a/index.html
+++ b/index.html
@@ -528,16 +528,13 @@
               run 🏃‍♂️, or dreaming up fresh ideas to bring to life.
               With curiosity as my compass and challenges as fuel, I’m constantly looking for new ways to grow and
               create 🚀.
-              Right now, I’m on the lookout for an internship where I can grow, team up with awesome people, and make a
-              real impact — all with curiosity, drive, and good vibes 🚀.
             </p>
             <div class="resume-dropdown">
               <a href="#" class="btn resume-toggle" onclick="event.preventDefault()">📄 My Resume ▼</a>
               <div class="resume-menu">
-                <a href="#" class="resume-option" data-file="assets/Short - CV - Université - Stage.pdf">Version
-                  courte</a>
-                <a href="#" class="resume-option" data-file="assets/Long - CV - Université - Stage.pdf">Version
-                  longue</a>
+                <a href="#" class="resume-option" data-file="assets/Short - CV - Université - Stage.pdf">Compact</a>
+                <a href="#" class="resume-option" data-file="assets/Long - CV - Université - Stage.pdf">More
+                  detailed</a>
               </div>
             </div>
           </div>
