Update fix cookies

--- a/index.html
+++ b/index.html
@@ -15,26 +15,7 @@
   <meta name="keywords"
     content="Portfolio, Informatique, Computer Science, EPFL, Java, Python, HTML, CSS, GitHub, Programmation, Azgaoui Omar Ziyad, Internship, Stage" />
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D743R8VEYS"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-D743R8VEYS');
-  </script>
-
   <link rel="stylesheet" href="index.css" />
-
-  <!-- Microsoft Clarity -->
-  <script type="text/javascript">
-    (function (c, l, a, r, i, t, y) {
-      c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
-      t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
-      y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-    })(window, document, "clarity", "script", "ss4df6cdw0");
-  </script>
 
 </head>
 
@@ -651,6 +632,92 @@
     <span class="cv-modal__close">&times;</span>
     <div class="cv-content">
       <iframe id="cvFrame" class="cv-frame" src="" frameborder="0"></iframe>
+    </div>
+  </div>
+
+  <!-- Cookie Banner -->
+  <div id="cookie-banner" role="region" aria-label="Cookie notice">
+    <div class="cookie-icon" aria-hidden="true">
+
+      <!-- small cookie icon -->
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+        <path d="M12 2a10 10 0 1 0 9.44 6.78 3 3 0 0 1-3.64-3.64A9.98 9.98 0 0 0 12 2Z" stroke="rgba(255,50,88,0.8)"
+          fill="rgba(255,50,88,0.18)" />
+        <circle cx="9" cy="9.5" r="1.2" fill="#fff" />
+        <circle cx="14.5" cy="8" r="1.2" fill="#fff" />
+        <circle cx="12" cy="14" r="1.2" fill="#fff" />
+        <circle cx="17" cy="13" r="1.2" fill="#fff" />
+      </svg>
+
+    </div>
+
+    <div class="cookie-text">
+      This website uses cookies.
+      <div class="learn-more-block">
+        <a id="privacy-link">Learn more</a>
+        <span class="separator-line"></span>
+      </div>
+    </div>
+
+
+    <div class="actions">
+      <button id="cookie-accept" type="button" class="btn-solid" aria-label="Accept cookies">Continue</button>
+    </div>
+  </div>
+
+  <!-- Privacy Modal -->
+  <div id="privacy-modal" role="dialog" aria-modal="true" aria-labelledby="privacy-title">
+    <div id="privacy-content">
+      <span id="privacy-close" aria-label="Close policy">&times;</span>
+
+      <h1 id="privacy-title">Privacy Policy</h1>
+      <p style="text-align:center;"><em>Last updated: August 2025</em></p>
+
+      <h2>1. Introduction</h2>
+      <p>
+        This is a <strong>personal portfolio website</strong> created by <strong>Azgaoui Omar Ziyad</strong>.
+        Its sole purpose is to showcase my projects, skills, and professional experiences.
+        No personal data is collected for commercial or advertising purposes.
+      </p>
+
+      <h2>2. Use of Cookies</h2>
+      <p>
+        The cookies used on this site are strictly for:
+      </p>
+      <ul>
+        <li>measuring audience and analyzing navigation patterns;</li>
+        <li>improving performance and enhancing user experience.</li>
+      </ul>
+      <p>
+        These cookies are only set after obtaining <strong>your consent</strong>.
+      </p>
+
+      <h2>3. Tools Used</h2>
+      <h3>Google Analytics</h3>
+      <p>
+        Used to analyze site traffic (pages viewed, visit duration, device type, approximate location).
+        Data is anonymized and used solely for statistical purposes.
+        <a href="https://policies.google.com/privacy?hl=en" target="_blank" rel="noopener">View Google’s Privacy
+          Policy</a>.
+      </p>
+
+      <h3>Microsoft Clarity</h3>
+      <p>
+        Used to analyze visitor interactions (clicks, scrolling, mouse movements) in order to improve navigation.
+        Data is also anonymized.
+        <a href="https://privacy.microsoft.com/en-us/privacystatement" target="_blank" rel="noopener">View Microsoft’s
+          Privacy Statement</a>.
+      </p>
+
+      <h2>4. Your Rights</h2>
+      <ul>
+        <li>the right to access, rectify, or delete your data;</li>
+        <li>the right to withdraw your consent at any time.</li>
+      </ul>
+      <p style="text-align:center;">
+        For any inquiries, please contact me at:<br>
+        <a href="mailto:omarziyad.azgaoui2005@gmail.com">omarziyad.azgaoui2005@gmail.com</a>
+      </p>
     </div>
   </div>
 
