--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
     </div>
 
     <div class="cookie-text">
-      This website uses cookies.
+      This site uses cookies.
       <div class="learn-more-block">
         <a id="privacy-link">Learn more</a>
         <span class="separator-line"></span>
