--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
   <meta name="keywords"
     content="Portfolio, Informatique, Computer Science, EPFL, Java, Python, HTML, CSS, GitHub, Programmation, Azgaoui Omar Ziyad, Internship, Stage" />
 
+  <!-- Open Graph for preview -->
+  <meta property="og:title" content="Portfolio | Azgaoui Omar Ziyad">
+  <meta property="og:description" content="Explore my portfolio — projects, skills, and experience in computer science at EPFL.">
+  <meta property="og:image" content="https://azogoat.github.io/Portfolio/images/Preview-PortfolioWeb.png">
+  <meta property="og:url" content="https://azogoat.github.io/Portfolio/">
+  <meta property="og:type" content="website">
+
+
   <link rel="stylesheet" href="index.css" />
 
 </head>
@@ -653,7 +661,7 @@
     </div>
 
     <div class="cookie-text">
-      This site uses cookies.
+      This website uses cookies.
       <div class="learn-more-block">
         <a id="privacy-link">Learn more</a>
         <span class="separator-line"></span>
@@ -676,7 +684,7 @@
 
       <h2>1. Introduction</h2>
       <p>
-        This is a <strong>personal portfolio website</strong> created by <strong>Azgaoui Omar Ziyad</strong>.
+        This is a <strong>personal portfolio</strong> website created by <strong>Azgaoui Omar Ziyad</strong>.
         Its sole purpose is to showcase my projects, skills, and professional experiences.
         No personal data is collected for commercial or advertising purposes.
       </p>
