--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
   <!-- Open Graph for preview -->
   <meta property="og:title" content="Portfolio | Azgaoui Omar Ziyad">
-  <meta property="og:description" content="Explore my portfolio — projects, skills, and experience in computer science at EPFL.">
+  <meta property="og:description"
+    content="Explore my portfolio — projects, skills, and experience in computer science at EPFL.">
   <meta property="og:image" content="https://azogoat.github.io/Portfolio/images/Preview-PortfolioWeb.png">
   <meta property="og:url" content="https://azogoat.github.io/Portfolio/">
   <meta property="og:type" content="website">
@@ -84,8 +85,9 @@
             <div class="work__text">
               <h3>ReCHor</h3>
               <p>
-                A route-finding system using the Connection Scan Algorithm (CSA), built for public transit networks.
-                Includes GUI, UMAP export, and iCalendar integration.
+                A route-finding system for the Swiss public transport network, built with a custom Connection Scan
+                Algorithm (CSA) and multi-criteria optimization. Features a JavaFX interface, GeoJSON export, and
+                iCalendar integration.
               </p>
               <ul class="work__list">
                 <li>Java</li>
@@ -122,8 +124,8 @@
             <div class="work__text">
               <h3>ICMonGame</h3>
               <p>
-                A turn-based mini-RPG inspired by Pokémon, where users create characters, explore a map, and engage in
-                dynamic Java-based battles.
+                A turn-based mini-RPG inspired by Pokémon, with collectible creatures, dynamic attack behaviors, and an
+                interactive GUI. Built with modular object-oriented design and event-driven gameplay.
               </p>
               <ul class="work__list">
                 <li>Java</li>
@@ -159,8 +161,8 @@
             <div class="work__text">
               <h3>Portfolio</h3>
               <p>
-                A fully responsive personal portfolio site with custom sliders, modals, and dynamic
-                gallery features.
+                A fully responsive portfolio site showcasing projects, skills, and experience. Includes custom sliders,
+                lightbox galleries, analytics tracking, and a clean, accessible design for all devices.
               </p>
               <ul class="work__list">
                 <li>JavaScript</li>
@@ -188,8 +190,8 @@
             <div class="work__text">
               <h3>Hangman</h3>
               <p>
-                An interactive Hangman game in Python with multiple difficulty levels and polished visuals for each
-                game state using turtle.
+                A graphical Hangman game with difficulty levels, scoring, and real-time visual updates using the Turtle
+                graphics module. Includes interactive word guessing and animated feedback.
               </p>
               <ul class="work__list">
                 <li>Python</li>
