--- a/index.html
+++ b/index.html
@@ -298,12 +298,7 @@
                 <span class="info-icon"
                   title="My main IDE for Java development, especially during academic and personal projects.">ℹ️</span>
               </div>
-              <div class="skill-item">
-                <img src="./images/svg/latex.svg" class="skills__logo" title="LaTeX" alt="LaTeX">
-                <span class="skill-name">LaTex Editor</span>
-                <span class="info-icon"
-                  title="I use LaTeX for writing clean, structured reports, especially in scientific and technical contexts.">ℹ️</span>
-              </div>
+
               <div class="skill-item">
                 <img src="./images/svg/vs code.svg" class="skills__logo" title="VS Code" alt="VS Code">
                 <span class="skill-name">VS Code</span>
@@ -311,10 +306,49 @@
                   title="My go-to editor for web development, Python scripting, and quick prototyping.">ℹ️</span>
               </div>
               <div class="skill-item">
+                <img src="./images/svg/latex.svg" class="skills__logo" title="LaTeX" alt="LaTeX">
+                <span class="skill-name">LaTex Editor</span>
+                <span class="info-icon"
+                  title="I use LaTeX for writing clean, structured reports, especially in scientific and technical contexts.">ℹ️</span>
+              </div>
+              <div class="skill-item">
+                <img src="./images/svg/google-analytics.svg" class="skills__logo" title="Google Analytics"
+                  alt="Google Analytics">
+                <span class="skill-name">Google Analytics</span>
+                <span class="info-icon"
+                  title="I use Google Analytics to track and analyze website traffic, user behavior, and performance metrics.">ℹ️</span>
+              </div>
+              <div class="skill-item">
+                <img src="./images/logos/microsoft-clarity.png" class="skills__logo" title="Microsoft Clarity"
+                  alt="Microsoft Clarity">
+                <span class="skill-name">Microsoft Clarity</span>
+                <span class="info-icon"
+                  title="I use Microsoft Clarity to monitor user interactions through heatmaps, session recordings, and behavior insights.">ℹ️</span>
+              </div>
+              <div class="skill-item">
                 <img src="./images/svg/outlook.svg" class="skills__logo" title="Outlook" alt="Outlook">
                 <span class="skill-name">Outlook</span>
                 <span class="info-icon"
                   title="I use Outlook daily for professional communication and time management.">ℹ️</span>
+              </div>
+              <div class="skill-item">
+                <img src="./images/svg/excel.svg" class="skills__logo" title="Microsoft Excel" alt="Microsoft Excel">
+                <span class="skill-name">Excel</span>
+                <span class="info-icon"
+                  title="I use Microsoft Excel to organize, analyze, and visualize data through formulas, charts, and pivot tables.">ℹ️</span>
+              </div>
+              <div class="skill-item">
+                <img src="./images/svg/word.svg" class="skills__logo" title="Microsoft Word" alt="Microsoft Word">
+                <span class="skill-name">Word</span>
+                <span class="info-icon"
+                  title="I use Microsoft Word to create, format, and edit professional documents and reports.">ℹ️</span>
+              </div>
+              <div class="skill-item">
+                <img src="./images/svg/powerpoint.svg" class="skills__logo" title="Microsoft PowerPoint"
+                  alt="Microsoft PowerPoint">
+                <span class="skill-name">PowerPoint</span>
+                <span class="info-icon"
+                  title="I use Microsoft PowerPoint to design engaging and visually appealing presentations.">ℹ️</span>
               </div>
             </div>
           </div>
