--- a/index.html
+++ b/index.html
@@ -93,15 +93,11 @@
                 <li>Java</li>
                 <li>CSS</li>
               </ul>
-
               <div class="work__links">
                 <a href="https://github.com/AZOGOAT/ReCHor" class="link__text" target="_blank"
                   rel="noopener noreferrer">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="https://github.com/AZOGOAT?tab=repositories" title="View Source Code" target="_blank"
-                  rel="noopener noreferrer">
-                  <img src="./images/svg/github.svg" class="work__code" alt="GitHub">
+                  Check it out <span>&rarr;</span>
+                  <img src="./images/svg/github.svg" title="View Source Code" alt="GitHub">
                 </a>
               </div>
             </div>
@@ -134,10 +130,8 @@
               <div class="work__links">
                 <a href="https://github.com/AZOGOAT/ICMonGame" class="link__text" target="_blank"
                   rel="noopener noreferrer">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="https://github.com/AZOGOAT?tab=repositories" target="_blank" rel="noopener noreferrer">
-                  <img src="./images/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                  Check it out <span>&rarr;</span>
+                  <img src="./images/svg/github.svg" title="View Source Code" alt="GitHub">
                 </a>
               </div>
             </div>
@@ -173,10 +167,8 @@
               <div class="work__links">
                 <a href="https://github.com/AZOGOAT/Portfolio" class="link__text" target="_blank"
                   rel="noopener noreferrer">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="https://github.com/AZOGOAT?tab=repositories">
-                  <img src="./images/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                  Check it out <span>&rarr;</span>
+                  <img src="./images/svg/github.svg" title="View Source Code" alt="GitHub">
                 </a>
               </div>
             </div>
@@ -200,10 +192,8 @@
               <div class="work__links">
                 <a href="https://github.com/AZOGOAT/Hangman.git" class="link__text" target="_blank"
                   rel="noopener noreferrer">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="https://github.com/AZOGOAT?tab=repositories" target="_blank" rel="noopener noreferrer">
-                  <img src="./images/svg/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                  Check it out <span>&rarr;</span>
+                  <img src="./images/svg/github.svg" title="View Source Code" alt="GitHub">
                 </a>
               </div>
             </div>
@@ -657,6 +647,10 @@
       <p class="footer__quote">
         <em>"Curiosity didn’t kill the cat. It built the app."</em><br />
         <span style="font-size: 0.9em; opacity: 0.7;">– Anonymous, but probably sleep-deprived</span>
+      </p>
+
+      <p class="footer__copyright">
+        © 2025 Azgaoui Omar Ziyad. All rights reserved.
       </p>
 
     </div>
