--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   <img src="./images/projects/ReCHor/umap.png" class="work__image" alt="Project 2" />
                   <img src="./images/projects/ReCHor/icalendar.png" class="work__image" alt="Project 3" />
                   <video src="./images/projects/ReCHor/rechor-final-demo.mp4" class="work__image" controls muted
-                    playsinline></video>
+                    playsinline preload="metadata"></video>
                 </div>
                 <button class="prev">&#10094;</button>
                 <button class="next">&#10095;</button>
