--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- ***** Work ***** -->
 
     <section class="work" id="work">
-      <!-- Modal pour afficher les images en grand -->
+      <!-- Modal -->
       <div id="galleryModal" class="gallery-modal">
         <button class="close-button">&times;</button>
         <div class="gallery-content">
@@ -73,7 +73,6 @@
           <div class="dots"></div>
         </div>
       </div>
-
 
       <div class="row">
         <h2>My Work</h2>
