--- a/index.html
+++ b/index.html
@@ -599,9 +599,8 @@
             <div class="resume-dropdown">
               <a href="#" class="btn resume-toggle" onclick="event.preventDefault()">📄 My Resume ▼</a>
               <div class="resume-menu">
-                <a href="#" class="resume-option" data-file="assets/Short - CV - Université - Stage.pdf">Compact</a>
-                <a href="#" class="resume-option" data-file="assets/Long - CV - Université - Stage.pdf">More
-                  detailed</a>
+                <a href="#" class="resume-option" data-file="assets/Omar Ziyad Azgaoui - Resume.pdf">English</a>
+                <a href="#" class="resume-option" data-file="assets/Omar Ziyad Azgaoui - CV.pdf">French</a>
               </div>
             </div>
           </div>
